# x-tweetter-backend

./: .gitignore  README.md  db.sqlite3  et --soft 7183a84f4e83d895e49f804aaa9e6343fb0b97f8  manage.py  pyproject.toml  requirements.txt
posts/: admin.py  models.py  urls.py
posts/migrations/: 0001_initial.py  0002_comentarios_delete_comment.py  0003_rename_comentarios_comentario.py  0004_imagem_uploaded_at_alter_imagem_image.py  0005_post_imagem.py  0006_delete_imagem.py
posts/serializers/: __init__.py  post_serializers copy.py  post_serializers.py
posts/viewsets/: __init__.py  post_viewset.py
tweetter/: asgi.py  settings.py  urls.py  wsgi.py
usuarios/: models.py  urls.py
usuarios/migrations/: 0001_initial.py  0002_usuario_about.py  0003_usuario_perfilphoto.py  0004_alter_usuario_perfilphoto.py  0005_alter_usuario_username.py  0006_alter_usuario_perfilphoto.py  0007_alter_usuario_options_alter_usuario_managers_and_more.py  0008_remove_usuario_perfilphoto.py  0009_usuario_perfilphoto.py  0010_remove_usuario_perfilphoto.py
usuarios/serializers/: __init__.py  usuario_serializers.py
usuarios/viewsets/: __init__.py  usuario_viewset.py
