[tool.poetry]
name = "tweetter-backend"
version = "0.1.0"
description = ""
authors = ["Matheuss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
django = "5.1.2"
django-cors-headers = "4.5.0"
django-rest-framework = "0.1.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
pillow = "11.0.0"
pyjwt = "2.9.0"
sqlparse = "0.5.1"
tzdata = "2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
